# kowalski

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Readme.md  docker-compose.yaml  justfile
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
kowalski_core/: Cargo.toml
kowalski_core/src/: device.rs  lib.rs  utils.rs
kowalski_core/src/code_processor/: code.rs
kowalski_core/src/embeddings/: embedding_model_service.rs  openai_embedding_response.rs
kowalski_core/src/git_provider/: client.rs  git.rs  mod.rs
kowalski_core/src/llm/: analyzer_model.rs  cloude_completion_response.rs  inference.rs  mod.rs  models.rs  openai.rs  openai_completion_response.rs  text_model.rs
kowalski_core/src/memory/: memory_db.rs
server/: Cargo.toml
server/migrations/: 20240409183024_create-analyzer-requests.up.sql
server/src/: analyze.rs  apidoc.rs  db.rs  main.rs  router.rs  state.rs
server/src/configure/: config.rs
server/src/entities/: analyzer_requests.rs  api_key.rs  mod.rs  repositories.rs  repository.rs  team.rs  user.rs
server/src/errors/: mod.rs
server/src/handlers/: analyze.rs  auth.rs  health.rs  mod.rs
server/src/middleware/: auth.rs
server/src/models/: analyze.rs  auth.rs
server/src/repository/: user.rs
server/src/service/: jwt.rs  mod.rs
src/: analyzer.rs  cli.rs  device.rs  diff.rs  main.rs
src/code_processor/: code.rs
src/embeddings/: bert.rs  embedding.rs  mod.rs  openai.rs  transformer.rs
src/factory/: factory.rs
src/git_provider/: client.rs  pr.rs
src/llm/: analyzer_model.rs  anthropic.rs  inference.rs  mod.rs  models.rs
src/memory/: memory_db.rs
web/: .gitignore  next.config.js  package-lock.json  package.json
web/src/app/signin/: page.tsx
web/src/app/signup/: page.tsx
web/src/components/Analyze/: AnalyzerInput.tsx
web/src/components/Auth/: signin.tsx  signup.tsx
web/src/requests/: analyze.ts  auth.ts
