[package]
name = "kowalski"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
tokio = "1.37.0"
chrono = "0.4.37"
kowalski_core= { path = "../kowalski_core" }