[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["http2",  "multipart", "ws"]}
axum-macros = "0.4.1"
kowalski_core = { path = "../kowalski_core" }
log = "0.4.21"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = "1.37.0"
trace = "0.1.7"
